# genetic-algorithms

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  GameObject.h  Genetic.h
src/: Application.cpp  Genetic.cpp  main.cpp
